--- a/tyler.html
+++ b/tyler.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <main>
-        <img src="/images/hai di lao.jpg" alt="Hai Di Lao Hot Pot">
-        <img src="/images/nan xiang.jpg" alt="Nan Xiang Xiao Long Bao">
-        <img src="/images/paesanos.jpg" alt="Paesanos NYC">
-        <img src="/images/rubys.jpg" alt="Ruby's Cafe NYC">
-        <img src="/images/wah fung.jpg" alt="Wah Fung No. 1 Fast Food">
-        <img src="/images/wondee siam.jpg" alt="Wondee Siam NYC">
-        <img src="/images/sweet moment.jpg" alt="Sweet Moment NYC">
+        <img src="images/hai di lao.jpg" alt="Hai Di Lao Hot Pot">
+        <img src="images/nan xiang.jpg" alt="Nan Xiang Xiao Long Bao">
+        <img src="images/paesanos.jpg" alt="Paesanos NYC">
+        <img src="images/rubys.jpg" alt="Ruby's Cafe NYC">
+        <img src="images/wah fung.jpg" alt="Wah Fung No. 1 Fast Food">
+        <img src="images/wondee siam.jpg" alt="Wondee Siam NYC">
+        <img src="images/sweet moment.jpg" alt="Sweet Moment NYC">
     </main>
 </body>
 </html>
