--- a/tyler.html
+++ b/tyler.html
@@ -7,6 +7,17 @@
     <title>Tyler's Favorite Restaurants</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href = "index.html">Home</a></li>
+                <li><a href= "/">Antony Wu</a></li>
+                <li><a href="tyler.html">Tyler Huang</a></li>
+            </ul>
+        </nav>
+        <h1>Week Two discussion</h1>
+
+    </header>
     <main>
         <img src="images/hai di lao.jpg" alt="Hai Di Lao Hot Pot">
         <img src="images/nan xiang.jpg" alt="Nan Xiang Xiao Long Bao">
