--- a/tyler.html
+++ b/tyler.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href= "/">Antony Wu</a></li>
+                <li><a href= "antony.html">Antony Wu</a></li>
                 <li><a href="tyler.html">Tyler Huang</a></li>
             </ul>
         </nav>
