--- a/antony.html
+++ b/antony.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href = "index.html">Home</a></li>
+                <li><a href= "antony.html">Antony Wu</a></li>
+                <li><a href="tyler.html">Tyler Huang</a></li>
+            </ul>
+        </nav>
+        <h1>Week Two discussion</h1>
+
+    </header>
     <main>
         <img src="images/MeetFresh.png" alt="Meet Fresh"/> <!--https://www.visithoustontexas.com/listings/meet-fresh/30513/-->
         <img src="images/Juniors.jpeg" alt="Juniors"/> <!--https://brooklyneagle.com/articles/2014/09/15/opinion-juniors-is-not-just-cheesecake/-->
