--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/html5reset.css">
-    <link rel="stylesheet" href="css/antony.css">
+    <!-- <link rel="stylesheet" href="css/html5reset.css"> -->
+    <!-- <link rel="stylesheet" href="css/student1.css"> -->
     <!-- <link rel="stylesheet" href="css/student2.css"> -->
     <!-- <link rel="stylesheet" href="css/student3.css"> -->
     <title>Week 2 Discussion</title>
@@ -15,25 +15,29 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href= "antony.html">Antony Wu</a></li>
-                <li><a href="tyler.html">Tyler Huang</a></li>
+                <li><a href="colleen.html">Colleen's Tea Page</a></li>
+                <li><a href="jackie.html">Jackie's Coffee Page</a></li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
-
+        <img src = "images/cover_image.jpg" width="800" alt = "">
     </header>
-    
-    <main>
-        <h2>Restaurants</h2>
-        <img src = "images/restaurant.jpg" width="200" alt = "Restaurant">
 
+    <main>
+        <h2>Coffee and Tea</h2>
+        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, voluptatum expedita quidem, repellat quae, fugit earum aspernatur repellendus illo eum impedit voluptates quibusdam laudantium dolore non deleniti error? Suscipit, quae?
+        </p>
+        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, voluptatum expedita quidem, repellat quae, fugit earum aspernatur repellendus illo eum impedit voluptates quibusdam laudantium dolore non deleniti error? Suscipit, quae?
+        </p>
+        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, voluptatum expedita quidem, repellat quae, fugit earum aspernatur repellendus illo eum impedit voluptates quibusdam laudantium dolore non deleniti error? Suscipit, quae?
+        </p>
         <h3>Top Three Reasons We picked Our Topic</h3>
         <ul>
-            <li>We love food</li>
-            <li>Everyone needs food to live</li>
-            <li>We went to a lot of Ann Arbor restaurants</li>
+            <li>A</li>
+            <li>B</li>
+            <li>C</li>
         </ul>
     </main>
-    
+
 </body>
 </html>
