css files updated

--- a/antony.html
+++ b/antony.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/antony.css">
 </head>
 <body>
+    <a href="#main">Skip To Main Content</a>
     <header>
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href= "antony.html">Antony Wu</a></li>
-                <li><a href="tyler.html">Tyler Huang</a></li>
+                <li><a href="raghav.html">Raghav Huang</a></li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
@@ -26,7 +28,9 @@
         <img src="images/dimsumgogo.jpeg" alt="DimSum Go Go"/> <!--https://www.theinfatuation.com/new-york/guides/nyc-where-to-eat-dim-sum-outside-in-chinatown-->
         <img src="images/Rolly_Rice.jpeg" alt="Rolly Rice" /> <!--https://ny.eater.com/2020/10/27/21536007/flushing-rice-roll-cheung-fun-cantonese-nyc-restaurant-opening-->
         <img src="images/wah_fung.jpeg" alt="Rolly Rice" /> <!--https://ny.eater.com/2020/5/14/21256509/nyc-chinatown-wah-fung-reopens-coronavirus-->
-
+        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, voluptatum expedita quidem, repellat quae, fugit earum aspernatur repellendus illo eum impedit voluptates quibusdam laudantium dolore non deleniti error? Suscipit, quae?</p>
+        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, voluptatum expedita quidem, repellat quae, fugit earum aspernatur repellendus illo eum impedit voluptates quibusdam laudantium dolore non deleniti error? Suscipit, quae?</p>
+        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, voluptatum expedita quidem, repellat quae, fugit earum aspernatur repellendus illo eum impedit voluptates quibusdam laudantium dolore non deleniti error? Suscipit, quae?</p>
     </main>
 </body>
 </html>
