--- a/raghav.html
+++ b/raghav.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tyler's Favorite Restaurants</title>
+    <link rel="stylesheet" href="css/raghav.css">
 </head>
 <body>
     <header>
@@ -12,7 +13,7 @@
             <ul>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href= "antony.html">Antony Wu</a></li>
-                <li><a href="tyler.html">Tyler Huang</a></li>
+                <li><a href="raghav.html">Raghav Huang</a></li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
