--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <title>Week 2 Discussion</title>
 </head>
 <body>
+    <a href="#main">Skip To Main Content</a>
     <header>
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href="colleen.html">Colleen's Tea Page</a></li>
-                <li><a href="jackie.html">Jackie's Coffee Page</a></li>
+                <li><a href="antony.html">Antony's Page</a></li>
+                <li><a href="raghav.html">Raghav's Coffee Page</a></li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
