--- a/raghav.html
+++ b/raghav.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/raghav.css">
 </head>
 <body>
+    <a href="#main">Skip To Main Content</a>
     <header>
         <nav>
             <ul>
@@ -28,5 +29,8 @@
         <img src="images/wondee siam.jpg" alt="Wondee Siam NYC">
         <img src="images/sweet moment.jpg" alt="Sweet Moment NYC">
     </main>
+    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, voluptatum expedita quidem, repellat quae, fugit earum aspernatur repellendus illo eum impedit voluptates quibusdam laudantium dolore non deleniti error? Suscipit, quae?</p>
+        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, voluptatum expedita quidem, repellat quae, fugit earum aspernatur repellendus illo eum impedit voluptates quibusdam laudantium dolore non deleniti error? Suscipit, quae?</p>
+        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, voluptatum expedita quidem, repellat quae, fugit earum aspernatur repellendus illo eum impedit voluptates quibusdam laudantium dolore non deleniti error? Suscipit, quae?</p>
 </body>
 </html>
