--- a/tyler.html
+++ b/tyler.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tyler's Favorite Restaurants</title>
-    <link rel="stylesheet" href="css/raghav.css">
+    <link rel="stylesheet" href="css/tyler.css">
 </head>
 <body>
     <a href="#main">Skip To Main Content</a>
@@ -13,12 +13,12 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href= "antony.html">Antony Wu</a></li>
-                <li><a href="raghav.html">Raghav Huang</a></li>
+                <li><a href="antony.html">Antony's Page</a></li>
+                <li><a href="tyler.html">Tyler's Page</a></li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
-
+        <img src = "images/cover_image.jpg" width="800" alt = "">
     </header>
     <main>
         <img src="images/hai di lao.jpg" alt="Hai Di Lao Hot Pot">
@@ -30,7 +30,7 @@
         <img src="images/sweet moment.jpg" alt="Sweet Moment NYC">
     </main>
     <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, voluptatum expedita quidem, repellat quae, fugit earum aspernatur repellendus illo eum impedit voluptates quibusdam laudantium dolore non deleniti error? Suscipit, quae?</p>
-        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, voluptatum expedita quidem, repellat quae, fugit earum aspernatur repellendus illo eum impedit voluptates quibusdam laudantium dolore non deleniti error? Suscipit, quae?</p>
-        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, voluptatum expedita quidem, repellat quae, fugit earum aspernatur repellendus illo eum impedit voluptates quibusdam laudantium dolore non deleniti error? Suscipit, quae?</p>
+    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, voluptatum expedita quidem, repellat quae, fugit earum aspernatur repellendus illo eum impedit voluptates quibusdam laudantium dolore non deleniti error? Suscipit, quae?</p>
+    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, voluptatum expedita quidem, repellat quae, fugit earum aspernatur repellendus illo eum impedit voluptates quibusdam laudantium dolore non deleniti error? Suscipit, quae?</p>
 </body>
 </html>
