--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href="antony.html">Antony's Page</a></li>
-                <li><a href="raghav.html">Raghav's Coffee Page</a></li>
+                <li><a href="tyler.html">Tyler's Page</a></li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
