--- a/tyler.html
+++ b/tyler.html
@@ -15,19 +15,22 @@
                 <li><a href = "index.html">Home</a></li>
                 <li><a href="antony.html">Antony's Page</a></li>
                 <li><a href="tyler.html">Tyler's Page</a></li>
+                <li><a href="raghav.html">Raghav's Page</a></li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
         <img src = "images/cover_image.jpg" width="800" alt = "">
     </header>
     <main>
-        <img src="images/hai di lao.jpg" alt="Hai Di Lao Hot Pot">
-        <img src="images/nan xiang.jpg" alt="Nan Xiang Xiao Long Bao">
-        <img src="images/paesanos.jpg" alt="Paesanos NYC">
-        <img src="images/rubys.jpg" alt="Ruby's Cafe NYC">
-        <img src="images/wah fung.jpg" alt="Wah Fung No. 1 Fast Food">
-        <img src="images/wondee siam.jpg" alt="Wondee Siam NYC">
-        <img src="images/sweet moment.jpg" alt="Sweet Moment NYC">
+        <div class="gallery">
+            <img src="images/hai di lao.jpg" alt="Hai Di Lao Hot Pot">
+            <img src="images/nan xiang.jpg" alt="Nan Xiang Xiao Long Bao">
+            <img src="images/paesanos.jpg" alt="Paesanos NYC">
+            <img src="images/rubys.jpg" alt="Ruby's Cafe NYC">
+            <img src="images/wah fung.jpg" alt="Wah Fung No. 1 Fast Food">
+            <img src="images/wondee siam.jpg" alt="Wondee Siam NYC">
+            <img src="images/sweet moment.jpg" alt="Sweet Moment NYC" id="span">
+        </div>
     </main>
     <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, voluptatum expedita quidem, repellat quae, fugit earum aspernatur repellendus illo eum impedit voluptates quibusdam laudantium dolore non deleniti error? Suscipit, quae?</p>
     <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, voluptatum expedita quidem, repellat quae, fugit earum aspernatur repellendus illo eum impedit voluptates quibusdam laudantium dolore non deleniti error? Suscipit, quae?</p>
