--- a/antony.html
+++ b/antony.html
@@ -14,8 +14,8 @@
             <ul>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href= "antony.html">Antony Wu</a></li>
-                <li><a href= "tyler.html">Antony Wu</a></li>
-                <li><a href="raghav.html">Raghav Huang</a></li>
+                <li><a href= "tyler.html">Tyler Hugan</a></li>
+                <li><a href="raghav.html">Raghav K</a></li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
