--- a/raghav.html
+++ b/raghav.html
@@ -15,7 +15,7 @@
                 <li><a href = "index.html">Home</a></li>
                 <li><a href= "antony.html">Antony Wu</a></li>
                 <li><a href= "tyler.html">Tyler</a></li>
-                <li><a href="raghav.html">Raghav Huang</a></li>
+                <li><a href="raghav.html">Raghav Krishnaswamy</a></li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
